--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,10 @@
           <version>2.11.6</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20231013</version>
+      </dependency>
   </dependencies>
 </project>
