--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
           <url>https://repo.papermc.io/repository/maven-public/</url>
       </repository>
       <repository>
+          <id>spigotmc-repo</id>
+          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+      </repository>
+      <repository>
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
@@ -72,15 +76,16 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>spigot-api</artifactId>
+          <version>1.16.5-R0.1-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
           <groupId>me.clip</groupId>
           <artifactId>placeholderapi</artifactId>
           <version>2.11.6</version>
           <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.json</groupId>
-          <artifactId>json</artifactId>
-          <version>20231013</version>
       </dependency>
   </dependencies>
 </project>
