--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,19 +9,20 @@ volume: 1.0 # Sound volume level (0.0 to 1.0)
 pitch: 1.0 # Sound pitch level (0.5 to 2.0)
 
 messages:
-  toggle-on: "Notifications are enabled!"
-  toggle-off: "Notifications are turned off!"
-  no-permission: "You do not have permission for this command!"
-  reload: "Config has been reloaded!"
-  player-only: "This command is for players only!"
+  toggle-on: "Notifications have been enabled!"
+  toggle-off: "Notifications have been disabled!"
+  no-permission: "You do not have permission to use this command!"
+  reload: "Configuration has been reloaded!"
+  player-only: "This command can only be used by players!"
 
   example:
     - ""
     - " &#4ef89b[&lLirBroadcast&#4ef89b] &7(/notification)"
     - ""
-    - " Download the plugin - "
+    - " Download the plugin from:"
     - " &#4ef89bhttps://modrinth.com/plugin/lirbroadcast"
     - ""
+
   example2:
     - ""
     - " &#4ef89b● Plugin &#4ef89bsupports&f any hex colors! &#4ef89bAnd also placeholders."
